--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
 <html>
-<link href="style.css">
-<link href="main.js">
-
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 <head>
     <title>Project 56</title>
 </head>
 
 <body>
     <h1>Hello, welcome to My Photogaraphy world.</h1>
-    <h4 id="date"></h4>\
+    <h4 id="date"></h4>
     <br>
     <div class="image-section">
         <div class="section-style">
-            <img src="" </div>
-
-
-
-
-
-
-
+            <img src="https://media.nature.com/lw800/magazine-assets/d41586-020-01390-w/d41586-020-01390-w_17974388.jpg">
         </div>
-
-
-
-
-
+        <p>"By discovering nature, you discover yourself." Maxime Lagacé</p>
+        <div class="section-style">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0jxTzpxGYoRJkzCJVhsiN92EzU-D-gFglqg&usqp=CAU">
+        </div>
+        <p>"Adopt the pace of nature: her secret is patience." Ralph Waldo Emerson</p>
+    </div>
 </body>
-
-
-
 
 </html>
