--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <title>Project 56</title>
 </head>
 
-<body>
+<body onload="setDate()">
     <h1>Hello, welcome to My Photogaraphy world.</h1>
-    <h4 id="date"></h4>
+    <h2 id="date" ></h2>
     <br>
     <div class="image-section">
         <div class="section-style">
             <img src="https://media.nature.com/lw800/magazine-assets/d41586-020-01390-w/d41586-020-01390-w_17974388.jpg">
+            <p>"By discovering nature, you discover yourself." Maxime Lagacé</p>
         </div>
-        <p>"By discovering nature, you discover yourself." Maxime Lagacé</p>
+        
         <div class="section-style">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0jxTzpxGYoRJkzCJVhsiN92EzU-D-gFglqg&usqp=CAU">
+                    <p>"Adopt the pace of nature: her secret is patience." Ralph Waldo Emerson</p>
+
         </div>
-        <p>"Adopt the pace of nature: her secret is patience." Ralph Waldo Emerson</p>
     </div>
 </body>
 
